[project]
name = "comfyui-benripack"
description = "ComfyUI-Benripack is an extension for ComfyUI that provides a CharacterPipe node. This node allows for managing various elements such as images, prompts, and models in a single structure, simplifying the workflow for character-based image generation."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/blackcodetavern/ComfyUI-Benripack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Benripack"
Icon = ""
