[project]
name = "comfyui-benripack"
description = "ComfyUI-Benripack is an extension for ComfyUI that provides a CharacterPipe node to simplify workflows, a 3d model loader and an AnimationExtractor to generate keyframe tilesets from animated 3d-models"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/blackcodetavern/ComfyUI-Benripack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "blackcodetavern"
DisplayName = "ComfyUI-Benripack"
Icon = ""
